--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-  <script type="text/javascript" src="src/index.js"></script>
-  <script type="text/javascript" src="src/journal.js"></script>
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Shape Tracker</title>
+  <title>Journal Tracker</title>
 </head>
+
 <body>
   <h3>Enter three lengths to determine if they can make a triangle.</h3>
   <form id="triangle-checker-form">
@@ -19,4 +18,5 @@
   </form>
   <div id="response"></div>
 </body>
+
 </html>
